--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -6,7 +6,7 @@ $(document).ready(function(){
 $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300px; width: auto;"></DIV>');
   var featid = <TMPL_VAR NAME=FEATID>;
   if (featid){
-    myObj = new generate_seq_obj_with_featid(featid,'<TMPL_VAR NAME=FEATNAME>','<TMPL_VAR NAME=DSID>','<TMPL_VAR NAME=DSGID>','<TMPL_VAR NAME=CHR>','<TMPL_VAR NAME=FEAT_START>','<TMPL_VAR NAME=FEAT_STOP>','<TMPL_VAR NAME=GSTID>');
+    myObj = new generate_seq_obj_with_featid(featid,'<TMPL_VAR NAME=FEATNAME>','<TMPL_VAR NAME=DSID>','<TMPL_VAR NAME=DSGID>','<TMPL_VAR NAME=CHR>','<TMPL_VAR NAME=FEAT_START>','<TMPL_VAR NAME=FEAT_STOP>','<TMPL_VAR NAME=GSTID>', '<TMPL_VAR NAME=REL>');
    }
   else{
     myObj = new generate_seq_obj('<TMPL_VAR NAME=DSID>','<TMPL_VAR NAME=DSGID>', '<TMPL_VAR NAME=CHR>','<TMPL_VAR NAME=GSTID>');}
@@ -17,7 +17,7 @@ $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300
 });
 
 
-function generate_seq_obj(dsid,dsgid, chr,gstid){
+function generate_seq_obj(dsid,dsgid, chr,gstid, rel){
 
   this.start=$('#upstream').val()*1;
   this.stop=$('#downstream').val()*1;
@@ -26,6 +26,7 @@ function generate_seq_obj(dsid,dsgid, chr,gstid){
   this.dsid=dsid;
   this.dsgid=dsgid;
   this.chr=chr;
+  this.rel=rel;
   this.pro=0;
   this.gstid=gstid;
 }
@@ -217,7 +218,7 @@ function get_sequence(rc,pro,add){
 	{
 	  wrap=1;
 	}
-  get_seq(['args__featid', 'args__'+myObj.featid, 'args__pro', 'args__'+pro, 'args__rc', 'args__'+rc, 'args__chr', 'args__'+myObj.chr, 'args__dsid', 'args__'+myObj.dsid, 'args__dsgid', 'args__'+myObj.dsgid, 'args__featname', 'args__'+myObj.featname, 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__'+myObj.start,'args__stop', 'args__'+myObj.stop,'args__add', 'args__'+add, 'args__wrap','args__'+wrap, 'args__gstid','args__'+myObj.gstid],['seq_text']);
+  get_seq(['args__featid', 'args__'+myObj.featid, 'args__pro', 'args__'+pro, 'args__rc', 'args__'+rc, 'args__chr', 'args__'+myObj.chr, 'args__dsid', 'args__'+myObj.dsid, 'args__dsgid', 'args__'+myObj.dsgid, 'args__featname', 'args__'+myObj.featname, 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__'+myObj.start,'args__stop', 'args__'+myObj.stop,'args__add', 'args__'+add, 'args__wrap','args__'+wrap, 'args__gstid','args__'+myObj.gstid, 'args__rel','args__'+myObj.rel],['seq_text']);
 }
 
 function featlist (link) {
